--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,6 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_9
 
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_SideScrollerBP",NewGameName="/Script/GroupProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_SideScrollerBP",NewGameName="/Script/GroupProject")
@@ -25,6 +24,10 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RecastNavMesh]
+bForceRebuildOnLoad=True
+RuntimeGeneration=Static
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -67,4 +70,6 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/Engine.NavigationSystem]
+bGenerateNavigationOnlyAroundNavigationInvokers=True
 
