--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,6 +28,14 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RecastNavMesh]
 bForceRebuildOnLoad=True
 RuntimeGeneration=Static
+CellSize=1.000000
+CellHeight=1.000000
+AgentRadius=22.000000
+AgentHeight=64.000000
+MaxSimplificationError=1.000000
+
+[/Script/Engine.NavigationSystem]
+bGenerateNavigationOnlyAroundNavigationInvokers=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -69,7 +77,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/Engine.NavigationSystem]
-bGenerateNavigationOnlyAroundNavigationInvokers=True
-
