Shooting for white and blue chips added
Shooting for white and blue chips has been added to the game.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -33,6 +33,7 @@ CellHeight=1.000000
 AgentRadius=22.000000
 AgentHeight=64.000000
 MaxSimplificationError=1.000000
+AgentMaxHeight=64.000000
 
 [/Script/Engine.NavigationSystem]
 bGenerateNavigationOnlyAroundNavigationInvokers=True
@@ -77,5 +78,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
