Fixed editor so it should open MainLevelMap by default

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=910627114D82AC63398A17B33483BDF5
-ProjectName=Side Scroller BP Game Template
+ProjectName=Royal Flush
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "89C0F64840087000CFE484905474EF6B", "Royal Flush")
 
 [StartupActions]
 bAddPacks=True
