--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
+GameDefaultMap=/Game/Maps/MainLevelMap.MainLevelMap
 GlobalDefaultGameMode=/Game/SideScrollerBP/Blueprints/SideScrollerGameMode.SideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
