cleanup and toms list

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -45,6 +45,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="LeftChip",Key=Gamepad_LeftShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RightChip",Key=Gamepad_RightShoulder,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="RightChip",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=Gamepad_RightTriggerAxis,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="horizontal",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="horizontal",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="horizontal",Key=Gamepad_LeftX,Scale=1.000000)
