turned off testing, re-added left click to fire
should be last build. starter content has crept onto project again

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -49,6 +49,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="LeftChip",Key=RightMouseButton,bShift=True,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ChipFire",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Dash",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="ChipFire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Gamepad_LeftX,Scale=1.000000)
